# cigi-ccl_4_0

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CCL4MigrationNotes.txt  CMakeLists.txt  CMakePresets.json  ChangeLog  INSTALL.vcxproj  INSTALL.vcxproj.filters  MiniHost.cs  README.org  ReleaseNotes.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ccl.i  ccl.sln  ccl_wrap_patch.cxx  cigicl-shared.vcxproj  cigicl-shared.vcxproj.filters  cigicl.pc  clean.cmd  config.status  configure  example.i  example.i.in  exampleCSHARP_wrap_patch.cxx  example_wrap.cxx  libtool
animal/: CMakeLists.txt  animal.i
csharp/: CigiAccelerationCtrlV4.cs  CigiAerosolRespV3.cs  CigiAerosolRespV4.cs  CigiAllocFailedException.cs  CigiAnimationCtrlV4.cs  CigiAnimationStopV3.cs  CigiAnimationStopV4.cs  CigiAnimationTable.cs  CigiArtPartCtrlV1.cs  CigiArtPartCtrlV2.cs  CigiArtPartCtrlV3.cs  CigiArtPartCtrlV4.cs  CigiAtmosCtrlV3.cs  CigiAtmosCtrlV4.cs  CigiBaseAerosolResp.cs  CigiBaseAnimationCtrl.cs  CigiBaseAnimationStop.cs  CigiBaseArtPartCtrl.cs  CigiBaseCircleSymbolData.cs  CigiBaseCircleSymbolTextureData.cs  CigiBaseCollDetSegDef.cs  CigiBaseCollDetSegResp.cs  CigiBaseCollDetVolDef.cs  CigiBaseCollDetVolResp.cs  CigiBaseCompCtrl.cs  CigiBaseConfClampEntityCtrl.cs  CigiBaseEarthModelDef.cs  CigiBaseEntityCtrl.cs  CigiBaseEntityPositionCtrl.cs  CigiBaseEnvCondReq.cs  CigiBaseEnvCtrl.cs  CigiBaseEnvRgnCtrl.cs  CigiBaseEventNotification.cs  CigiBaseEventProcessor.cs  CigiBaseHatHotReq.cs  CigiBaseHatHotResp.cs  CigiBaseIGCtrl.cs  CigiBaseIGMsg.cs  CigiBaseLosResp.cs  CigiBaseLosSegReq.cs  (+246 more)
examples/CigiDummyIG/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CigiDummyIG.def  CigiDummyIG.sln  CigiDummyIG.vcxproj  CigiDummyIG.vcxproj.filters  DummyIG.cpp  INSTALL.vcxproj  INSTALL.vcxproj.filters
examples/CigiDummyIGCSharp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CigiDummyIGCSharp.csproj  CigiDummyIGCSharp.sln  DummyIG.cs  INSTALL.vcxproj  INSTALL.vcxproj.filters
examples/CigiMiniHost/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CigiMiniHost.sln  CigiMiniHost.vcxproj  CigiMiniHost.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MiniHost.cpp  MiniHost.def  README.txt
examples/CigiMiniHostCSharp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  CigiMiniHostCSharp.csproj  CigiMiniHostCSharp.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  MiniHost.cs  MiniHostCIGI.cs
examples/interop/: CMakeLists.txt  CMakePresets.json
examples/interop/ada_to_cplusplus/: Project_test.gpr  README.org  my_cpp_function.cpp  my_cpp_function.h  my_func_test.adb
examples/interop/animal/: CMakeLists.txt  animal.cpp  animal.h  animal.i  animal_main.cpp
examples/interop/kermit/: CMakeLists.txt  CMakeSettings.json  kermit.cs
examples/tinyxml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  tinyxml.sln  tinyxml.vcxproj  xmltest.vcxproj  xmltest.vcxproj.filters
include/: CigiAccelerationCtrlV4.h  CigiAerosolRespV3.h  CigiAerosolRespV4.h  CigiAllPackets.h  CigiAnimationCtrlV4.h  CigiAnimationStopV3.h  CigiAnimationStopV4.h  CigiAnimationTable.h  CigiArtPartCtrlV1.h  CigiArtPartCtrlV2.h  CigiArtPartCtrlV3.h  CigiArtPartCtrlV4.h  CigiAtmosCtrl.h  CigiAtmosCtrlV4.h  CigiBaseAnimationCtrl.h  CigiBaseAnimationStop.h  CigiBaseArtPartCtrl.h  CigiBaseCircleSymbolData.h  CigiBaseCircleSymbolTextureData.h  CigiBaseCollDetSegDef.h  CigiBaseCollDetSegResp.h  CigiBaseCollDetVolDef.h  CigiBaseCollDetVolResp.h  CigiBaseCompCtrl.h  CigiBaseConfClampEntityCtrl.h  CigiBaseEarthModelDef.h  CigiBaseEntityCtrl.h  CigiBaseEntityPositionCtrl.h  CigiBaseEnvCondReq.h  CigiBaseEnvCtrl.h  CigiBaseEnvRgnCtrl.h  CigiBaseEventNotification.h  CigiBaseEventProcessor.h  CigiBaseHatHotReq.h  CigiBaseHatHotResp.h  CigiBaseIGCtrl.h  CigiBaseIGMsg.h  CigiBaseLosResp.h  CigiBaseLosSegReq.h  CigiBaseLosVectReq.h  (+212 more)
kermit/: CMakeLists.txt  kermit.cs
source/: CigiAccelerationCtrlV4.cpp  CigiAerosolRespV3.cpp  CigiAerosolRespV4.cpp  CigiAnimationCtrlV4.cpp  CigiAnimationStopV3.cpp  CigiAnimationStopV4.cpp  CigiAnimationTable.cpp  CigiArtPartCtrlV1.cpp  CigiArtPartCtrlV2.cpp  CigiArtPartCtrlV3.cpp  CigiArtPartCtrlV4.cpp  CigiAtmosCtrl.cpp  CigiAtmosCtrlV4.cpp  CigiBaseAerosolResp.cpp  CigiBaseAnimationCtrl.cpp  CigiBaseArtPartCtrl.cpp  CigiBaseCircleSymbolData.cpp  CigiBaseCircleSymbolTextureData.cpp  CigiBaseCollDetSegDef.cpp  CigiBaseCollDetSegResp.cpp  CigiBaseCollDetVolDef.cpp  CigiBaseCollDetVolResp.cpp  CigiBaseConfClampEntityCtrl.cpp  CigiBaseEarthModelDef.cpp  CigiBaseEntityCtrl.cpp  CigiBaseEntityPositionCtrl.cpp  CigiBaseEnvCondReq.cpp  CigiBaseEnvCtrl.cpp  CigiBaseEnvRgnCtrl.cpp  CigiBaseEventNotification.cpp  CigiBaseHatHotReq.cpp  CigiBaseIGCtrl.cpp  CigiBaseLosResp.cpp  CigiBaseLosSegReq.cpp  CigiBaseLosVectReq.cpp  CigiBaseMaritimeSurfaceCtrl.cpp  CigiBaseMaritimeSurfaceResp.cpp  CigiBaseMotionTrackCtrl.cpp  CigiBasePositionReq.cpp  CigiBasePositionResp.cpp  (+193 more)
swig/: CMakeLists.txt  README.org  example.i  example.i.in
swig/animal/: animal.cpp  animal_main.cpp
swig/include/: CigiBaseAerosolResp.h  CigiBasePacket.h  CigiProcessType.h  CigiTypes.h  CigiVersionID.h
swig/kermit/: CMakeSettings.json
swig/scripts/: swig-generate-source-csharp-linux.sh
swig/scripts/elisp/: cmake-to-visual-studio.el  swig-generate-interface.el
test/: Example.cs  example.cpp  example.cs  example.h  example.i  examplePINVOKE.cs  example_wrap.cxx
